# llvm-pass-dead-code-elimination

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
src/: .#MyDCE.cpp  MyDCE.cpp
tests/: empty_bypass_block.ll  remove_unrechable_blocks.ll
tests/alloca/: alloca_call.ll  alloca_dead.ll  alloca_escape.ll  alloca_load.ll  alloca_volatile.ll
tests/dead_instructions/: side_effect_test.ll  volatile_test.ll
tests/fold/: fold.ll  fold_phi_test.ll
tests/fold_bypass_unreachable_blocks/: bypass_phi_bail.ll  empty_bypass_block.ll  fold.ll  remove_unreachable_blocks.ll
tests/provided/: ex1.ll  ex2.ll  ex3.ll
